--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="has-scroll-init has-scroll-smooth" data-scroll-direction="vertical" style="cursor: auto; --vh: 8.15px;"><head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Arunima Dutta • Tech Enthusiast; Web Developer</title>
+      <title>Arunima • Tech Enthusiast; Web Developer</title>
       <meta name="description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
       <meta property="og:title" content="Dennis Snellenberg • Freelance Designer &amp; Developer">
       <meta property="og:description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
