--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="main-wrap" data-scroll-container=""><header class="section home-header theme-dark" data-scroll-section="" data-scroll-section-id="section0" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); opacity: 1; pointer-events: all;" data-scroll-section-inview="">
    <div class="overlay personal-image no-select once-in is-inview" data-scroll="" data-scroll-speed="-3" data-scroll-position="top" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);">
-      <img src="https://dennissnellenberg.com/assets/img/DSC07033.jpg">
+      <img src="me.jpeg">
    </div>
    <div class="overlay get-height once-in once-in-secondary" style="">
       <div class="hanger">
@@ -283,10 +283,10 @@
    <div class="big-name">
       <div class="name-h1 is-inview" data-scroll="" data-scroll-direction="horizontal" data-scroll-speed="4" data-scroll-position="top" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);">
          <div class="name-wrap" style="transform: translate(-90.431%, 0%) translate3d(0px, 0px, 0px);">
-            <h1 class="no-select once-in once-in-secondary" style="">Dennis Snellenberg<span class="spacer">—</span></h1>
+            <h1 class="no-select once-in once-in-secondary" style="">Arunima Dutta<span class="spacer">—</span></h1>
          </div>
       <div class="name-wrap" style="left: 1371px; top: 0px; position: absolute; transform: translate(-90.431%, 0%) translate3d(0px, 0px, 0px);">
-            <h1 class="no-select once-in once-in-secondary" style="">Dennis Snellenberg<span class="spacer">—</span></h1>
+            <h1 class="no-select once-in once-in-secondary" style="">Arunima Dutta<span class="spacer">—</span></h1>
          </div></div>
    </div>
    <div class="white-block"></div>
