added name and about

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Arunima dutta dutta• Tech Enthusiast; Web Developer</title>
-      <meta name="description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
-      <meta property="og:title" content="Dennis Snellenberg • Freelance Designer &amp; Developer">
+      <meta name="description" content="Helping brands thrive in the digital world. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
+      <meta property="og:title" content="Dennis Snellenberg • Opensource contributor &amp; Web Developer">
       <meta property="og:description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
       <meta property="og:image" content="https://dennissnellenberg.com/media/site/89d468b455-1646837228/meta-image-dennis-snellenberg-860x540-crop-q72.jpg">
       <meta property="og:site_name" content="Dennis Snellenberg">
                               <meta property="og:locale" content="en">
-      <meta property="og:type" content="website">      <meta property="twitter:title" content="Dennis Snellenberg • Freelance Designer &amp; Developer">
+      <meta property="og:type" content="website">      <meta property="twitter:title" content="Dennis Snellenberg • Opensource Contributor &amp; Web Developer">
       <meta property="twitter:description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
       <meta property="twitter:image" content="https://dennissnellenberg.com/media/site/89d468b455-1646837228/meta-image-dennis-snellenberg-860x540-crop-q72.jpg">
       <meta name="twitter:card" content="summary_large_image">
@@ -276,7 +276,7 @@
     </g>
 </svg></div>
             </div>
-            <h4><span>Freelance</span> Designer &amp; Developer</h4>
+            <h4><span>OpenSource</span> Contributor &amp; Web Developer</h4>
          </div>
       </div>
    </div>
