--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
          </div>
          <div class="flex-col">
             <div class="horizontal-single-item">
-               <div class="overlay lazy entered loaded" style="background-position: center center; background-repeat: no-repeat; background-size: cover; background-image: url(&quot;https://dennissnellenberg.com/assets/img/home-item-3.jpg&quot;);" data-bg="https://dennissnellenberg.com/assets/img/home-item-3.jpg" data-ll-status="loaded"></div>
+               <div class="overlay lazy entered loaded" style="background-position: center center; background-repeat: no-repeat; background-size: cover; background-image: url(&quot;me.jpeg&quot;);" data-bg="me.jpeg" data-ll-status="loaded"></div>
             </div>
          </div>
          <div class="flex-col">
@@ -504,7 +504,7 @@
          </div>
          <div class="flex-col">
             <div class="horizontal-single-item">
-               <div class="overlay lazy entered loaded" style="background-position: center center; background-repeat: no-repeat; background-size: cover; background-image: url(&quot;https://dennissnellenberg.com/assets/img/home-item-6.jpg&quot;);" data-bg="https://dennissnellenberg.com/assets/img/home-item-6.jpg" data-ll-status="loaded"></div>
+               <div class="overlay lazy entered loaded" style="background-position: center center; background-repeat: no-repeat; background-size: cover; background-image: url(&quot;https://dennissnellenberg.com/assets/img/home-item-6.jpg&quot;);" data-bg="me.jpeg" data-ll-status="loaded"></div>
             </div>
          </div>
          <div class="flex-col">
@@ -542,7 +542,7 @@
         </g>
     </g>
 </svg></div>
-                                    <h2><span><div class="profile-picture"></div> Let’s work  </span><span>together</span></h2>
+                                    <h2><span><div class="me.jpeg"></div> Let’s work  </span><span>together</span></h2>
                                 </div>
                             </div>
                             <div class="row">
@@ -563,15 +563,15 @@
                             <div class="row">
                                 <div class="flex-col">
                                     <div class="btn btn-normal">
-                                        <a href="mailto:info@dennissnellenberg.com" class="btn-click magnetic" data-strength="25" data-strength-text="15">
+                                        <a href="mailto:darunima45@gmail.com" class="btn-click magnetic" data-strength="25" data-strength-text="15">
                                         <div class="btn-fill"></div>
                                         <span class="btn-text">
-                                            <span class="btn-text-inner change">info@dennissnellenberg.com</span>
+                                            <span class="btn-text-inner change">darunima45@gmail.com</span>
                                         </span>
                                         </a>
                                     </div>
                                     <div class="btn btn-normal">
-                                        <a href="tel:+31627847430" class="btn-click magnetic" data-strength="25" data-strength-text="15">
+                                        <a href="tel:+918099313464" class="btn-click magnetic" data-strength="25" data-strength-text="15">
                                         <div class="btn-fill"></div>
                                         <span class="btn-text">
                                             <span class="btn-text-inner change">+31 6 27 84 74 30</span>
