--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="main-wrap" data-scroll-container=""><header class="section home-header theme-dark" data-scroll-section="" data-scroll-section-id="section0" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); opacity: 1; pointer-events: all;" data-scroll-section-inview="">
    <div class="overlay personal-image no-select once-in is-inview" data-scroll="" data-scroll-speed="-3" data-scroll-position="top" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);">
-      <img src="me.jpeg">
+      <img src="me.png">
    </div>
    <div class="overlay get-height once-in once-in-secondary" style="">
       <div class="hanger">
