--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
    </div>
    <div class="overlay get-height once-in once-in-secondary" style="">
       <div class="hanger">
-         <p><span>Located </span><span>in the </span><span>Netherlands</span></p>
+         <p><span>From</span><span></span><span>INDIA</span></p>
          <!--?xml version="1.0" encoding="UTF-8"?-->
 <svg width="300px" height="121px" viewBox="0 0 300 121" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <title>Combined Shape</title>
