corrected the scrolling text

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
    <div class="big-name">
       <div class="name-h1 is-inview" data-scroll="" data-scroll-direction="horizontal" data-scroll-speed="4" data-scroll-position="top" style="transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);">
          <div class="name-wrap" style="transform: translate(-90.431%, 0%) translate3d(0px, 0px, 0px);">
-            <h1 class="no-select once-in once-in-secondary" style="">Arunima Dutta<span class="spacer">—</span></h1>
+            <h1 class="no-select once-in once-in-secondary" style=""><span class="spacer">—</span></h1>
          </div>
       <div class="name-wrap" style="left: 1371px; top: 0px; position: absolute; transform: translate(-90.431%, 0%) translate3d(0px, 0px, 0px);">
             <h1 class="no-select once-in once-in-secondary" style="">Arunima Dutta<span class="spacer">—</span></h1>
