--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Arunima dutta dutta• Tech Enthusiast; Web Developer</title>
-      <meta name="description" content="Helping brands thrive in the digital world. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
+      <meta name="description" content="Elevating Digital Experiences through Web Development Proficiency © Code by Arunima">
       <meta property="og:title" content="Dennis Snellenberg • Opensource contributor &amp; Web Developer">
-      <meta property="og:description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
+      <meta property="og:description" content="Elevating Digital Experiences through Web Development Proficiency © Code by Arunima">
       <meta property="og:image" content="https://dennissnellenberg.com/media/site/89d468b455-1646837228/meta-image-dennis-snellenberg-860x540-crop-q72.jpg">
       <meta property="og:site_name" content="Dennis Snellenberg">
                               <meta property="og:locale" content="en">
       <meta property="og:type" content="website">      <meta property="twitter:title" content="Dennis Snellenberg • Opensource Contributor &amp; Web Developer">
-      <meta property="twitter:description" content="Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Arunima">
+      <meta property="twitter:description" content="Elevating Digital Experiences through Web Development Proficiency © Code by Arunima">
       <meta property="twitter:image" content="https://dennissnellenberg.com/media/site/89d468b455-1646837228/meta-image-dennis-snellenberg-860x540-crop-q72.jpg">
       <meta name="twitter:card" content="summary_large_image">
       <meta name="google" content="notranslate">
@@ -132,7 +132,7 @@
                                 </a>
                             </li>
                             <li class="btn btn-link">
-                                <a href="https://dennissnellenberg.com/about" class="btn-click magnetic" data-strength="24" data-strength-text="12">
+                                <a href="http://127.0.0.1:5501/.vscode/about.html" class="btn-click magnetic" data-strength="24" data-strength-text="12">
                                 <span class="btn-text">
                                     <span class="btn-text-inner">About</span>
                                 </span>
